# RB

./: .gitignore
api-server/: Cargo.toml
api-server/src/: app_config.rs  main.rs
api-server/src/model/: core.rs  post.rs
api-server/src/routes/: mod.rs  post.rs  router.rs
api-server/src/static/: index.html
api-server/src/static/posts/: My Blog.html  my_new_blog.html  title.html
src/: main.rs
src/static/: index.html
src/static/posts/: authorization-bearer.md
static-generator/: Cargo.toml
static-generator/src/: main.rs
static-generator/src/html_generator/: injector.rs  template.hbs  template.html
static-generator/src/http_client/: api.rs
static-generator/src/model/: mod.rs  post.rs  posts.rs
