[package]
name = "static-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.5.0"
tokio = {version = "1.28.0", features = ["full"]}
futures = "0.3"
serde = "1.0.162"
bson = "2.6.1"
handlebars = "4.3.6"

